deployment/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-scoring-service
spec:
  type: ClusterIP
  selector:
    app: credit-scoring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
